semaphore tested and reworked